--- a/TestStruts2/.project
+++ b/TestStruts2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>TestStruts2</name>
+	<name>Struts2_Hello_World</name>
 	<comment></comment>
 	<projects>
 	</projects>
